--- a/.gitignore
+++ b/.gitignore
@@ -51,10 +51,11 @@ logs/
 
 # Work directories - AIP data (large files)
 work/_AIPs/
+!work/_AIPs/argentina/
+!work/_AIPs/argentina/docs_to_process/
+!work/_AIPs/argentina/docs_to_process/argentina_Docs_AIP_links.json
 work/pdfs/
 work/agentic_outputs/
 work/pdf_processed/
 work/state/
 temp/
-
-work/_AIPs
